# esports-oracle

./: .env  .gitignore  Cargo.toml  diesel.toml  docker-compose.yml
abi/: oracle.json  platform.json
db/: Cargo.toml
db/src/: lib.rs  types.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220918_165030_create_match.rs
migrations/2022-08-29-232724_create_event/: down.sql  up.sql
oracle/: contract.rs  events.rs  handler.rs  lib.rs  main.rs  settings.rs  types.rs
oracle-data/: Cargo.toml
oracle-data/src/: lib.rs  matches.rs  request.rs  types.rs
oracle-data/src/riot/: mod.rs  settings.rs  store.rs
oracle/abi/: GoodGame.json  Oracle.json
oracle/chain/: block.rs  collector.rs  error.rs  fields.rs  mod.rs  types.rs
oracle/database/: conn.rs  event.rs  matches.rs  mod.rs  prelude.rs  schema.rs
oracle/events/: collector.rs  handler.rs  mod.rs  models.rs  parameters.rs  processor.rs  types.rs
oracle/matches/: error.rs  events.rs  fields.rs  mod.rs  models.rs
src/: main.rs
src/database/: conn.rs  mod.rs  models.rs  schema.rs
src/events/: handler.rs  parameters.rs  types.rs
