[package]
name = "goodgame-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = "0.17.0"
hex-literal = "0.3.4"
log = "0.4.17"
env_logger = "0.9.0"
lazy_static = "1.4.0"
tokio = { version = "1.20.0", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.18", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.85"

[dev-dependencies]
diesel_cli = "1.4.1"

[[bin]]
path = "src/main.rs"
name = "oracle"
