[package]
name = "mini-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = "0.17.0"
hex-literal = "0.3.4"
log = "0.4.17"
env_logger = "0.9.0"
lazy_static = "1.4.0"
tokio = { version = "1.20.0", features = ["full"] }
diesel = { version = "2.0.0", features = ["postgres", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.18", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.85"
oracle_data = { path = "./oracle-data" }
thiserror = "1.0.33"

[[bin]]
path = "oracle/main.rs"
name = "oracle"
