[package]
name = "mini-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = "0.17.0"
hex-literal = "0.3.4"
log = "0.4.17"
env_logger = "0.9.0"
lazy_static = "1.4.0"
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.18", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.85"
thiserror = "1.0.33"
oracle_data = { path = "./oracle-data" }
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
async-trait = "0.1.57"
async_once = "0.2.6"

[[bin]]
path = "oracle/main.rs"
name = "oracle"
